Archive2/68/07267d336d42de/output
main.cpp: In function 'int main()':
main.cpp:14:24: error: no matching function for call to 'bar::bar(<brace-enclosed initializer list>)'
     auto b = bar{ 1, 2 };
                        ^
main.cpp:14:24: note: candidates are:
main.cpp:6:8: note: bar::bar()
 struct bar
        ^
main.cpp:6:8: note:   candidate expects 0 arguments, 2 provided
main.cpp:6:8: note: constexpr bar::bar(const bar&)
main.cpp:6:8: note:   candidate expects 1 argument, 2 provided
main.cpp:6:8: note: constexpr bar::bar(bar&&)
main.cpp:6:8: note:   candidate expects 1 argument, 2 provided
